<resources>
    <string name="app_name">ThemeLt</string>

    <string name="txt_theme">Themes</string>
    <string name="txt_icons">Icons</string>
    <string name="txt_widget">Widgets</string>
    <string name="txt_wallpaper">Wallpapers</string>
    <string name="txt_nametest">Bear Color</string>
    <string name="txt_more">More ></string>
    <string name="txt_customicon">Custom Icons</string>
    <string name="txt_GO">GO</string>
    <string name="txt_ntk">Nhà thiết kế: Frank Junior</string>
    <string name="txt_down">Tải xuống: </string>
    <string name="txt_gphep">Giấy phép: Giấy phép Lutech</string>
    <string name="txt_caidat">Cài đặt</string>
    <string name="txt_mokhoa">Mở khoá</string>
    <string name="txt_schome">Đặt ở Màn hình chính</string>
    <string name="txt_scclock">Đặt ở Màn hình khoá</string>
    <string name="txt_scall">Đặt trên cả hai màn hình</string>
    <string name="txt_cachlayicon">Cách lấy Icon không có hình mờ</string>
    <string name="txt_bochon">Bỏ chọn tất cả</string>
    <string name="txt_anh">Ảnh</string>
    <string name="txt_tvanh">Thư viện ảnh</string>
    <string name="txt_vanban">Văn bản</string>
    <string name="txt_vitrivanban">Vị trí văn bản</string>
    <string name="txt_kichthuoc">Kích thước văn bản</string>
    <string name="txt_mauchu">Màu chữ</string>
    <string name="txt_phongchu">Phông chữ</string>
    <string name="txt_khunganh">Khung ảnh</string>
    <string name="txt_hint">Vui lòng nhập nội dung</string>
    <string name="txt_xoa">Xoá</string>
    <string name="txt_mokhoati">Mở khoá tiện ích</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>