<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/set_home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/border_background"
        android:textColor="@color/white"
        android:text="@string/txt_schome"/>
    <Button
        android:id="@+id/set_clock_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:textColor="@color/white"
        android:background="@drawable/border_background"
        android:text="@string/txt_scclock"/>
    <Button
        android:id="@+id/set_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:textColor="@color/white"
        android:background="@drawable/border_background"
        android:text="@string/txt_scall"/>

</LinearLayout>