<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".activity.WidgetPhotoFixActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_preessed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/icons8back30" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_caidat"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/iconsdollar48" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/money"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/moneycolor"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="500"
                        android:textColor="?attr/colorOnPrimary" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/addsquare" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_widgetFix"
            android:layout_width="match_parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            android:layout_height="250dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_anh"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/icons8plus30"
                        app:shapeAppearanceOverlay="@style/RoundedSquare" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        app:shapeAppearanceOverlay="@style/RoundedSquare" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_tvanh"
                    android:textColor="@color/black"

                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/widget_fix_tvienanh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_vanban"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/background_bottom_nav"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/txt_hint"
                        android:textColorHint="@color/iconcolornocheck"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:gravity="center"
                        android:text="@string/txt_xoa"
                        android:textColor="@color/btnsetting"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_vitrivanban"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:background="@drawable/background_bottom_nav"
                    android:padding="5dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:checkedButton="@+id/radioButton1">
                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:rowCount="3">
                        <RadioButton
                            android:id="@+id/radioButton1"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:outlineAmbientShadowColor="@color/black"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/radioButton7"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton8"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radioButton9"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </GridLayout>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_kichthuoc"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_mauchu"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/widget_fix_color"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_phongchu"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/txt_khunganh"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:id="@+id/widget_fix_khunganh"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/border_backgroundhong"
                    android:text="@string/txt_mokhoati"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>