<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".activity.IconSettingActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="10dp"
           android:orientation="horizontal">
           <ImageButton
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:id="@+id/back_preessed"
               android:src="@drawable/icons8back30"
               android:layout_gravity="center"
               android:background="@null"/>
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="20sp"
               android:textStyle="bold"
               android:layout_gravity="center"
               android:textColor="@color/black"
               android:text="@string/txt_caidat"/>
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:orientation="horizontal">

               <ImageView
                   android:id="@+id/money"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:adjustViewBounds="true"
                   android:background="@android:color/transparent"
                   android:scaleType="centerCrop"
                   android:src="@drawable/iconsdollar48" />

               <LinearLayout

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toEndOf="@id/money"
                   android:layout_centerVertical="true"
                   android:gravity="center">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@color/moneycolor"
                       android:paddingLeft="10dp"
                       android:paddingRight="10dp"
                       android:text="500"
                       android:textColor="?attr/colorOnPrimary" />

                   <ImageButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@android:color/transparent"
                       android:src="@drawable/addsquare" />
               </LinearLayout>

           </RelativeLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <ImageView
                   android:layout_width="15dp"
                   android:layout_height="15dp"
                   android:layout_gravity="center"
                   android:src="@drawable/iconshelp20"/>
               <TextView
                   android:layout_marginStart="5dp"
                   android:layout_width="wrap_content"
                   android:textColor="@color/textcolor"
                   android:layout_height="wrap_content"
                   android:text="@string/txt_cachlayicon"/>
           </LinearLayout>
           <TextView
               android:layout_width="match_parent"
               android:gravity="end"
               android:layout_height="wrap_content"
               android:textColor="@color/textcolor"
               android:text="@string/txt_bochon"/>
       </LinearLayout>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/IconSetting_btRC"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="10dp"/>
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>